# simpleDLLArch

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
app/: CMakeLists.txt  main.cpp
buildtool/: build.py
include/: EnglishSpeaker.h  ISpeaker.h  SpeakerAPI.h
src/: CMakeLists.txt  EnglishSpeaker.cpp  SpeakerAPI.cpp
test/: main.py
